refactor code ver 2