@@ -2,212 +2,154 @@ package com.smartcommerce.ecommerce.service;
 
 import com.smartcommerce.ecommerce.exceptions.APIException;
 import com.smartcommerce.ecommerce.exceptions.ResourceNotFoundException;
+import com.smartcommerce.ecommerce.mapper.CartMapper;
 import com.smartcommerce.ecommerce.model.Cart;
 import com.smartcommerce.ecommerce.model.CartItem;
 import com.smartcommerce.ecommerce.model.Product;
 import com.smartcommerce.ecommerce.payload.CartDTO;
-import com.smartcommerce.ecommerce.payload.ProductDTO;
 import com.smartcommerce.ecommerce.repositories.CartItemRepository;
 import com.smartcommerce.ecommerce.repositories.CartRepository;
 import com.smartcommerce.ecommerce.repositories.ProductRepository;
 import com.smartcommerce.ecommerce.util.AuthUtil;
 import jakarta.transaction.Transactional;
-import org.modelmapper.ModelMapper;
+import lombok.AccessLevel;
+import lombok.RequiredArgsConstructor;
+import lombok.experimental.FieldDefaults;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 @Service
+@RequiredArgsConstructor
+@FieldDefaults(level = AccessLevel.PRIVATE, makeFinal = true)
 public class CartServiceImpl implements CartService {
-    private final CartRepository cartRepository;
-    private final ProductRepository productRepository;
-    private final CartItemRepository cartItemRepository;
-    private final AuthUtil authUtil;
-    private final ModelMapper modelMapper;
+    CartRepository cartRepository;
+    ProductRepository productRepository;
+    CartItemRepository cartItemRepository;
+    AuthUtil authUtil;
+    CartMapper cartMapper;
 
-    public CartServiceImpl(CartRepository cartRepository, AuthUtil authUtil, ProductRepository productRepository,
-                           CartItemRepository cartItemRepository, ModelMapper modelMapper) {
-        this.cartRepository = cartRepository;
-        this.authUtil = authUtil;
-        this.productRepository = productRepository;
-        this.cartItemRepository = cartItemRepository;
-        this.modelMapper = modelMapper;
-    }
-
-    private Cart createCart() {
-        Cart userCart  = cartRepository.findCartByEmail(authUtil.loggedInEmail());
-        if(userCart != null){
+    private Cart getOrCreateCart() {
+        String email = authUtil.loggedInEmail();
+        Cart userCart = cartRepository.findCartByEmail(email);
+        if (userCart != null) {
             return userCart;
         }
 
         Cart cart = new Cart();
-        cart.setTotalPrice(0.00);
+        cart.setTotalPrice(0.0);
         cart.setUser(authUtil.loggedInUser());
         return cartRepository.save(cart);
     }
 
     @Override
+    @Transactional
     public CartDTO addProductToCart(Long productId, Integer quantity) {
-        Cart cart  = createCart();
+        Cart cart  = getOrCreateCart();
 
         Product product = productRepository.findById(productId)
                 .orElseThrow(() -> new ResourceNotFoundException("Product", "productId", productId));
 
-        CartItem cartItem = cartItemRepository.findCartItemByProductIdAndCartId(cart.getCartId(), productId);
+        CartItem existingItem = cartItemRepository.findCartItemByProductIdAndCartId(cart.getCartId(), productId);
 
-        if (cartItem != null) {
+        if (existingItem != null) {
             throw new APIException("Product " + product.getProductName() + " already exists in the cart");
         }
 
-        if (product.getQuantity() == 0) {
-            throw new APIException(product.getProductName() + " is not available");
-        }
-
         if (product.getQuantity() < quantity) {
-            throw new APIException("Please, make an order of the " + product.getProductName()
-                    + " less than or equal to the quantity " + product.getQuantity() + ".");
+            throw new APIException("Inventory insufficient. Only " + product.getQuantity() + " units left.");
         }
 
-        CartItem newCartItem = new CartItem();
+        CartItem newItem = CartItem.builder()
+                .product(product)
+                .cart(cart)
+                .quantity(quantity)
+                .discount(product.getDiscount())
+                .productPrice(product.getSpecialPrice())
+                .build();
 
-        newCartItem.setProduct(product);
-        newCartItem.setCart(cart);
-        newCartItem.setQuantity(quantity);
-        newCartItem.setDiscount(product.getDiscount());
-        newCartItem.setProductPrice(product.getSpecialPrice());
+        cartItemRepository.save(newItem);
+        cart.getCartItems().add(newItem);
 
-        cartItemRepository.save(newCartItem);
-
+        // Cập nhật tồn kho
         product.setQuantity(product.getQuantity() - quantity);
         productRepository.save(product);
 
+        // Cập nhật tổng tiền giỏ hàng
         cart.setTotalPrice(cart.getTotalPrice() + (product.getSpecialPrice() * quantity));
+        Cart updatedCart = cartRepository.save(cart);
 
-        cartRepository.save(cart);
-
-        CartDTO cartDTO = modelMapper.map(cart, CartDTO.class);
-
-        List<CartItem> cartItems = cart.getCartItems();
-
-        Stream<ProductDTO> productStream = cartItems.stream().map(item -> {
-            ProductDTO map = modelMapper.map(item.getProduct(), ProductDTO.class);
-            map.setQuantity(item.getQuantity());
-            return map;
-        });
-
-        cartDTO.setProducts(productStream.toList());
-
-        return cartDTO;
+        return cartMapper.toDTO(updatedCart);
     }
 
     @Override
     public List<CartDTO> getAllCarts() {
         List<Cart> carts = cartRepository.findAll();
-
         if (carts.isEmpty()) {
-            throw new APIException("No cart exists");
+            throw new APIException("No carts found");
         }
 
-            return carts.stream().map(cart -> {
-            CartDTO cartDTO = modelMapper.map(cart, CartDTO.class);
-
-            List<ProductDTO> products = cart.getCartItems().stream().map(cartItem -> {
-                ProductDTO productDTO = modelMapper.map(cartItem.getProduct(), ProductDTO.class);
-                productDTO.setQuantity(cartItem.getQuantity()); // Set the quantity from CartItem
-                return productDTO;
-            }).collect(Collectors.toList());
-
-            cartDTO.setProducts(products);
-
-            return cartDTO;
-
-        }).toList();
+        return carts.stream()
+                .map(cartMapper::toDTO)
+                .collect(Collectors.toList());
     }
 
 
     @Override
     public CartDTO getCart(String emailId, Long cartId) {
         Cart cart = cartRepository.findCartByEmailAndCartId(emailId, cartId);
-        if (cart == null){
+        if (cart == null) {
             throw new ResourceNotFoundException("Cart", "cartId", cartId);
         }
-        CartDTO cartDTO = modelMapper.map(cart, CartDTO.class);
-
-        cart.getCartItems().forEach(c ->
-                c.getProduct().setQuantity(c.getQuantity()));
-
-        List<ProductDTO> products = cart.getCartItems().stream()
-                .map(p -> modelMapper.map(p.getProduct(), ProductDTO.class))
-                .toList();
-        cartDTO.setProducts(products);
-
-        return cartDTO;
+        return cartMapper.toDTO(cart);
     }
 
 
     @Transactional
     @Override
-    public CartDTO updateProductQuantityInCart(Long productId, Integer quantity) {
-        String emailId = authUtil.loggedInEmail();
-        Cart userCart = cartRepository.findCartByEmail(emailId);
-        Long cartId  = userCart.getCartId();
-
-        Cart cart = cartRepository.findById(cartId)
-                .orElseThrow(() -> new ResourceNotFoundException("Cart", "cartId", cartId));
+    public CartDTO updateProductQuantityInCart(Long productId, Integer quantityChange) {
+        String email = authUtil.loggedInEmail();
+        Cart cart = cartRepository.findCartByEmail(email);
+        Long cartId = cart.getCartId();
 
         Product product = productRepository.findById(productId)
                 .orElseThrow(() -> new ResourceNotFoundException("Product", "productId", productId));
 
-        if (product.getQuantity() == 0) {
-            throw new APIException(product.getProductName() + " is not available");
-        }
-
-        if (product.getQuantity() < quantity) {
-            throw new APIException("Please, make an order of the " + product.getProductName()
-                    + " less than or equal to the quantity " + product.getQuantity() + ".");
-        }
-
         CartItem cartItem = cartItemRepository.findCartItemByProductIdAndCartId(cartId, productId);
-
         if (cartItem == null) {
-            throw new APIException("Product " + product.getProductName() + " not available in the cart!!!");
+            throw new APIException("Product not found in cart");
         }
 
-        int newQuantity = cartItem.getQuantity() + quantity;
+        int newQuantity = cartItem.getQuantity() + quantityChange;
 
-        // Validation to prevent negative quantities
         if (newQuantity < 0) {
-            throw new APIException("The resulting quantity cannot be negative.");
+            throw new APIException("Quantity cannot be negative");
         }
 
-        if (newQuantity == 0){
-            deleteProductFromCart(cartId, productId);
+        if (newQuantity == 0) {
+            deleteProductFromCart(cart.getCartId(), productId);
+            Cart refreshedCart = cartRepository.findById(cart.getCartId())
+                    .orElseThrow(() -> new ResourceNotFoundException("Cart", "cartId", cart.getCartId()));
+            return cartMapper.toDTO(refreshedCart);
         } else {
+            // Kiểm tra tồn kho khi tăng số lượng
+            if (quantityChange > 0 && product.getQuantity() < quantityChange) {
+                throw new APIException("Inventory insufficient");
+            }
+
+            cartItem.setQuantity(newQuantity);
             cartItem.setProductPrice(product.getSpecialPrice());
-            cartItem.setQuantity(cartItem.getQuantity() + quantity);
             cartItem.setDiscount(product.getDiscount());
-            cart.setTotalPrice(cart.getTotalPrice() + (cartItem.getProductPrice() * quantity));
+            cart.setTotalPrice(cart.getTotalPrice() + (product.getSpecialPrice() * quantityChange));
+            product.setQuantity(product.getQuantity() - quantityChange);
 
             cartItemRepository.save(cartItem);
-            cartRepository.save(cart);
+            productRepository.save(product);
+            Cart updatedCart = cartRepository.save(cart);
+
+            return cartMapper.toDTO(updatedCart);
         }
-
-        CartDTO cartDTO = modelMapper.map(cart, CartDTO.class);
-
-        List<CartItem> cartItems = cart.getCartItems();
-
-        Stream<ProductDTO> productStream = cartItems.stream().map(item -> {
-            ProductDTO prd = modelMapper.map(item.getProduct(), ProductDTO.class);
-            prd.setQuantity(item.getQuantity());
-            return prd;
-        });
-
-
-        cartDTO.setProducts(productStream.toList());
-
-        return cartDTO;
     }
 
 
@@ -218,20 +160,27 @@ public class CartServiceImpl implements CartService {
                 .orElseThrow(() -> new ResourceNotFoundException("Cart", "cartId", cartId));
 
         CartItem cartItem = cartItemRepository.findCartItemByProductIdAndCartId(cartId, productId);
-
         if (cartItem == null) {
             throw new ResourceNotFoundException("Product", "productId", productId);
         }
 
-        cart.setTotalPrice(cart.getTotalPrice() -
-                (cartItem.getProductPrice() * cartItem.getQuantity()));
+        // Hoàn trả lại số lượng cho kho sản phẩm
+        Product product = cartItem.getProduct();
+        product.setQuantity(product.getQuantity() + cartItem.getQuantity());
+        productRepository.save(product);
+
+        cart.setTotalPrice(cart.getTotalPrice() - (cartItem.getProductPrice() * cartItem.getQuantity()));
+
+        cart.getCartItems().remove(cartItem);
 
         cartItemRepository.deleteCartItemByProductIdAndCartId(cartId, productId);
+        cartRepository.save(cart);
 
-        return "Product " + cartItem.getProduct().getProductName() + " removed from the cart !!!";
+        return "Product " + product.getProductName() + " removed successfully";
     }
 
     @Override
+    @Transactional
     public void updateProductInCarts(Long cartId, Long productId) {
         Cart cart = cartRepository.findById(cartId)
                 .orElseThrow(() -> new ResourceNotFoundException("Cart", "cartId", cartId));
@@ -240,19 +189,17 @@ public class CartServiceImpl implements CartService {
                 .orElseThrow(() -> new ResourceNotFoundException("Product", "productId", productId));
 
         CartItem cartItem = cartItemRepository.findCartItemByProductIdAndCartId(cartId, productId);
+        if (cartItem == null) return;
 
-        if (cartItem == null) {
-            throw new APIException("Product " + product.getProductName() + " not available in the cart!!!");
-        }
-
-        double cartPrice = cart.getTotalPrice()
-                - (cartItem.getProductPrice() * cartItem.getQuantity());
+        // Tính toán lại giá dựa trên giá mới của sản phẩm (giữ nguyên số lượng)
+        double oldItemTotal = cartItem.getProductPrice() * cartItem.getQuantity();
+        double newItemTotal = product.getSpecialPrice() * cartItem.getQuantity();
 
         cartItem.setProductPrice(product.getSpecialPrice());
-
-        cart.setTotalPrice(cartPrice
-                + (cartItem.getProductPrice() * cartItem.getQuantity()));
+        cartItem.setDiscount(product.getDiscount());
+        cart.setTotalPrice(cart.getTotalPrice() - oldItemTotal + newItemTotal);
 
         cartItemRepository.save(cartItem);
+        cartRepository.save(cart);
     }
 }
